[package]
name = "wit"
version = "0.1.0"
edition = "2021"
authors = ["Will Hopkins <willothyh@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1.18"
ini = "1.3.0"
flate2 = "1.0.23"
rust-crypto = "0.2.36"
linked-hash-map = "0.5.4"
regex = "1.5.5"